WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87378
new test fast/js/dfg-arguments-mixed-alias.html fails on JSVALUE32_64
https://bugs.webkit.org/show_bug.cgi?id=87378
Summary
new test fast/js/dfg-arguments-mixed-alias.html fails on JSVALUE32_64
Kristóf Kosztyó
Reported
2012-05-24 05:36:18 PDT
This test introduced in
r118323
. It fails on qt and gtk 32bit
Attachments
The diff from the qt bot
(7.84 KB, text/plain)
2012-05-24 05:37 PDT
,
Kristóf Kosztyó
no flags
Details
the patch
(6.45 KB, patch)
2012-05-24 18:50 PDT
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kristóf Kosztyó
Comment 1
2012-05-24 05:37:06 PDT
Created
attachment 143796
[details]
The diff from the qt bot
Kristóf Kosztyó
Comment 2
2012-05-24 06:00:22 PDT
Committed
r118356
: <
http://trac.webkit.org/changeset/118356
>
Kristóf Kosztyó
Comment 3
2012-05-24 06:01:07 PDT
I've skipped this on qt.
Filip Pizlo
Comment 4
2012-05-24 18:45:39 PDT
I've gotten this to fail on 32-bit Mac as well. Changed title to indicate this. Patch on the way!
Filip Pizlo
Comment 5
2012-05-24 18:50:59 PDT
Created
attachment 143948
[details]
the patch
Filip Pizlo
Comment 6
2012-05-24 20:31:00 PDT
Landed a fix in
http://trac.webkit.org/changeset/118468
I'm going to mark this as fixed because I was able to repro failures on Mac 32-bit without this, and this patch fixes those failures. This change does NOT unskip any tests on Qt or Gtk though. Please reopen if those tests are still borked.
Csaba Osztrogonác
Comment 7
2012-05-25 00:31:24 PDT
Unskipped for Qt by
r118486
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug