new test fast/js/dfg-arguments-mixed-alias.html fails on JSVALUE32_64 https://bugs.webkit.org/show_bug.cgi?id=87378

Reviewed by Gavin Barraclough.

- Captured variable tracking forgot did not consistently handle arguments, leading to OSR
  badness.

- Nodes capable of exiting were tracked in a non-monotonic way, leading to compiler errors.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::InlineStackEntry::InlineStackEntry):
* dfg/DFGCSEPhase.cpp:
(JSC::DFG::CSEPhase::CSEPhase):
(CSEPhase):
(JSC::DFG::performCSE):
* dfg/DFGCSEPhase.h:
(DFG):
* dfg/DFGCommon.h:
* dfg/DFGDriver.cpp:
(JSC::DFG::compile):
* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::resetExitStates):
(DFG):
* dfg/DFGGraph.h:
(Graph):
* dfg/DFGPhase.h:
(DFG):
(JSC::DFG::runPhase):



Canonical link: https://commits.webkit.org/105221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118468 268f45cc-cd09-0410-ab3c-d52691b4dbfc